fix z-index of nav

--- a/css/style_mobilemenu.less
+++ b/css/style_mobilemenu.less
@@ -12,6 +12,7 @@
 	-webkit-perspective-origin: 50% 200%;
 	-moz-perspective-origin: 50% 200%;
 	perspective-origin: 50% 200%;
+    z-index: 100;
 }
 
 .dl-menuwrapper button {
